fixed some alignment problem in landing page

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -210,7 +210,7 @@ $yellow: rgba(245, 220, 12, 1);
 
 @media only screen and (max-width: 800px) {
   #company {
-    padding-top: 35rem;
+    padding-top: 22rem;
     padding-bottom: 35rem;
   }
 }
